--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "eslint": "^8.21.0",
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.16",
     "postcss-import": "^14.1.0",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "~4.7.4",
     "vite": "^3.0.5",
+    "vite-plugin-pages": "^0.25.0",
+    "vite-plugin-pages-sitemap": "^1.3.0",
     "vue-tsc": "^0.40.0"
   },
   "repository": {
