--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vueuse/head": "^0.7.9",
     "pinia": "^2.0.17",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
@@ -36,6 +37,7 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "~4.7.4",
+    "unplugin-auto-import": "^0.11.1",
     "vite": "^3.0.5",
     "vite-plugin-pages": "^0.25.0",
     "vite-plugin-pages-sitemap": "^1.3.0",
