--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "tailwindcss": "^3.1.8",
     "typescript": "~4.7.4",
     "unplugin-auto-import": "^0.11.1",
+    "unplugin-vue-components": "^0.22.4",
     "vite": "^3.0.5",
     "vite-plugin-pages": "^0.25.0",
     "vite-plugin-pages-sitemap": "^1.3.0",
